Move the hdaudio_cd out of the hdaudio_pci module and into the main hdaudio module.  Rearrange the inter-module dependencies accordingly.

Should resolve (my) PR kern/49836

XXX Pull-ups needed for netbsd-8 branch